--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.1.25+1
+version: 2.1.28+1
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
@@ -68,7 +68,8 @@ dependencies:
   loading_animation_widget: ^1.3.0
   flutter_launcher_icons: ^0.14.4
   flutter_keyboard_visibility: ^6.0.0
-  flutter_inappwebview: ^6.0.0
+  shimmer: ^3.0.0
+ # flutter_inappwebview: ^6.1.0+1
 
 dev_dependencies:
   flutter_test:
