--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+
 //        maven {
 //            url "https://storage.googleapis.com/download.flutter.io"
 //        }
