--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.0.4+50
+version: 3.0.5+51
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
@@ -47,7 +47,7 @@ dependencies:
   permission_handler: ^10.2.0
   file_saver: ^0.2.4
   bot_toast: ^4.1.3
-  pin_code_fields: ^8.0.1
+  pinput: ^5.0.1
   video_player: ^2.9.5
   fluttertoast: ^8.2.5
   persian_number_utility: ^1.1.3
@@ -57,7 +57,7 @@ dependencies:
   expandable: ^5.0.1
   url_launcher: ^6.3.1
   custom_radio_grouped_button: ^2.2.1
-  syncfusion_flutter_sliders: ^26.2.12
+  syncfusion_flutter_sliders: ^26.2.14
   image_picker: ^0.8.6
   share_plus: any
   flutter_widget_from_html_core: ^0.10.3
@@ -68,7 +68,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_keyboard_visibility: ^6.0.0
   shimmer: ^3.0.0
-
+  connectivity_plus: ^6.1.5
   # flutter_inappwebview: ^6.1.0+1
 
 dev_dependencies:
