--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.0.5+51
+version: 3.0.6+51
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
@@ -69,6 +69,10 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   shimmer: ^3.0.0
   connectivity_plus: ^6.1.5
+  flutter_switch: ^0.3.2
+  device_info_plus: ^10.1.2
+  #otp_autofill: ^4.1.0
+  #sms_autofill: ^2.4.1
   # flutter_inappwebview: ^6.1.0+1
 
 dev_dependencies:
