--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,4 +139,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
+
+}
