--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.0.7+51
+version: 3.0.9+51
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
@@ -71,6 +71,7 @@ dependencies:
   connectivity_plus: ^6.1.5
   flutter_switch: ^0.3.2
   sms_autofill: ^2.4.1
+  syncfusion_flutter_charts: ^26.2.14
   #device_info_plus: ^10.1.2
   #otp_autofill: ^4.1.0
   #sms_autofill: ^2.4.1
